<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.udacity.shoestore.navigation.Login">

        <TextView
            android:id="@+id/emailLabel"
            style="@style/labelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextHeight"
            app:layout_constraintEnd_toEndOf="@+id/emailLabel"
            app:layout_constraintStart_toStartOf="@+id/emailLabel"
            app:layout_constraintTop_toBottomOf="@+id/emailLabel"
            android:hint="@string/emailHint"
            style="@style/editTextStyle" />

        <TextView
            android:id="@+id/passwordLabel"
            style="@style/labelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passwordLabel"
            app:layout_constraintTop_toBottomOf="@+id/email"
            tools:layout_editor_absoluteX="162dp" />

        <EditText
            android:id="@+id/password"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="16dp"
            android:hint="@string/passwordHint"
            app:layout_constraintTop_toBottomOf="@+id/passwordLabel"
            tools:layout_editor_absoluteX="33dp" />

        <Button
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/signIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <Button
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sginUp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signIn"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>