<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.ShoesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ShoeDetailFragment">


        <TextView
            android:id="@+id/textView3"
            style="@style/labelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoeNameLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/shoeNameTextField"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextHeight"
            android:hint="@string/shoeNameLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:text="@={viewModel.shoeName}" />


        <TextView
            android:id="@+id/textView5"
            style="@style/labelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoeSizeLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeCompanyTextField" />


        <EditText
            android:id="@+id/shoeSizeTextField"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextHeight"
            android:hint="@string/shoeSizeLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:text="@={viewModel.shoeSize}" />

        <TextView
            android:id="@+id/textView7"
            style="@style/labelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoeCompanyLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeDescriptionTextField" />


        <EditText
            android:id="@+id/shoeCompanyTextField"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextHeight"
            android:hint="@string/shoeCompanyLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:text="@={viewModel.shoeCompany}"
            />

        <TextView
            android:id="@+id/textView9"
            style="@style/labelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoeDescriptionLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeNameTextField" />

        <EditText
            android:id="@+id/shoeDescriptionTextField"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextHeight"
            android:hint="@string/shoeDescriptionLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            android:text="@={viewModel.shoeDescription}"
            />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/saveButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeSizeTextField"
            />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/cnacelButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeSizeTextField" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>